tests/bad/testfile-main-return.go
package main

func main() int {return 42}
